--- a/OSD/OSD_Dataset.ipynb
+++ b/OSD/OSD_Dataset.ipynb
@@ -1,27 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Setup"
-      ],
       "metadata": {
         "id": "XLAwaiItIjx-"
-      }
+      },
+      "source": [
+        "# Setup"
+      ]
     },
     {
       "cell_type": "code",
@@ -38,15 +24,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Make Dataset!"
-      ],
       "metadata": {
         "id": "1kB4y6qbIqV0"
-      }
+      },
+      "source": [
+        "# Make Dataset!"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SGdHWfx8HW_i"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/\n",
         "import sqlite3\n",
@@ -100,15 +91,15 @@
         "\n",
         "# Be sure to close the connection\n",
         "con.close()"
-      ],
-      "metadata": {
-        "id": "SGdHWfx8HW_i"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "B057EwEKKKYn"
+      },
+      "outputs": [],
       "source": [
         "# Review\n",
         "%cd /content/\n",
@@ -116,39 +107,39 @@
         "!head -n 3 realfinal.txt\n",
         "!head -n 1 path.txt\n",
         "!wc path.txt -l"
-      ],
-      "metadata": {
-        "id": "B057EwEKKKYn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_bCwLsW5XR4x"
+      },
+      "outputs": [],
       "source": [
         "%cd /content/\n",
         "!mkdir /content/imagefolder\n",
         "%cd /content/imagefolder"
-      ],
-      "metadata": {
-        "id": "_bCwLsW5XR4x"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!img2dataset --url_list \"/content/realfinal.txt\" --input_format \"csv\" --url_col \"url\" --caption_col \"caption\" --thread_count=64 --image_size=256"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Mb97l0uOUSeL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!img2dataset --url_list \"/content/realfinal.txt\" --input_format \"csv\" --url_col \"url\" --caption_col \"caption\" --thread_count=64 --image_size=256"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bUjFAPRNnyJT"
+      },
+      "outputs": [],
       "source": [
         "import glob\n",
         "from datasets import *\n",
@@ -165,45 +156,61 @@
         "d = {'image':ims, \"text\":text}\n",
         "dataset = Dataset.from_dict(d).cast_column(\"image\", Image()).cast_column(\"text\",Value(dtype='string'))\n",
         "print(dataset)"
-      ],
-      "metadata": {
-        "id": "bUjFAPRNnyJT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Upload!"
-      ],
       "metadata": {
         "id": "TcIBcZA3IvnW"
-      }
+      },
+      "source": [
+        "# Upload!"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AyypmaNrwRbL"
+      },
+      "outputs": [],
       "source": [
         "from huggingface_hub import notebook_login\n",
         "\n",
         "notebook_login()"
-      ],
-      "metadata": {
-        "id": "AyypmaNrwRbL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset.push_to_hub('-INSERTUSER-/OSD-Dataset')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "E-nuBhjFq7GI"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset.push_to_hub('-INSERTUSER-/OSD-Dataset')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
