--- a/OSD/OSD_Training.ipynb
+++ b/OSD/OSD_Training.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Setup"
-      ],
+      "id": "HBctskc6H66V",
       "metadata": {
         "id": "HBctskc6H66V"
       },
-      "id": "HBctskc6H66V"
+      "source": [
+        "# Setup"
+      ]
     },
     {
       "cell_type": "code",
@@ -62,13 +62,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Train!"
-      ],
+      "id": "pcqCaeA7H28K",
       "metadata": {
         "id": "pcqCaeA7H28K"
       },
-      "id": "pcqCaeA7H28K"
+      "source": [
+        "# Train!"
+      ]
     },
     {
       "cell_type": "code",
@@ -96,13 +96,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Upload to Hub (Optional)"
-      ],
+      "id": "y_MV3RYhIIXx",
       "metadata": {
         "id": "y_MV3RYhIIXx"
       },
-      "id": "y_MV3RYhIIXx"
+      "source": [
+        "# Upload to Hub (Optional)"
+      ]
     },
     {
       "cell_type": "code",
@@ -125,13 +125,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Testing Model Output"
-      ],
+      "id": "O8mt9m22HyLK",
       "metadata": {
         "id": "O8mt9m22HyLK"
       },
-      "id": "O8mt9m22HyLK"
+      "source": [
+        "# Testing Model Output"
+      ]
     },
     {
       "cell_type": "code",
@@ -154,6 +154,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -169,10 +172,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.6"
     },
-    "colab": {
-      "provenance": []
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
     }
   },
   "nbformat": 4,
