--- a/LLM_Safety/Easy_Softprompt_Tuner.ipynb
+++ b/LLM_Safety/Easy_Softprompt_Tuner.ipynb
@@ -1,27 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Easy Softprompt Tuner",
-      "provenance": [],
-      "private_outputs": true
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "TPU"
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "B4Gx1qy98kPC"
       },
+      "outputs": [],
       "source": [
         "#@markdown # Easy Softprompt Tuner\n",
         "from google.colab import drive\n",
@@ -118,9 +103,31 @@
         "soft_prompt_description = supported + \" - \" + description\n",
         "trainer.export_to_mkultra(output_file, soft_prompt_name, soft_prompt_description)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "name": "Easy Softprompt Tuner",
+      "private_outputs": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
